updated electron and svelte

--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Hello World!</title>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+</head>
+<body>
+  <div ></div>
+  <div id="filename"> Helllo</div>
+  <div id="editor" class="tinymce-full"></div>
+  <script src="./renderer.js"></script>
+</body>
+
+</html> -->
+
+
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
@@ -14,12 +31,7 @@
       .mce-stack-layout-item{  flex: 0 0 auto;}
       .mce-edit-area{flex:1 1 auto;}
     </style>
-    <link rel="stylesheet" type="text/css" href="node_modules/tinymce/plugins/visualblocks/css/visualblocks.css"/>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self';">
-    <script src="renderer.js"></script>
   </head>
-  <body>
-    <div id="editor" class="tinymce-full"></div>
-  </body>
 
-</html>
+</html> -->
